--- a/products.html
+++ b/products.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>ASTRIO.products</title>
 	<link rel="stylesheet" type="text/css" href="products.css"/>
 </head>
@@ -28,11 +29,9 @@
 				</section>
 			</section>		
 		</section>											
-		<section class="alt_text"> When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go! Looking for some color to brighten up you today? Check out the cotton sundresses.
+		<section class="alt_text">When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go! Looking for some color to brighten up you today? Check out the cotton sundresses.
 		</section>
 	</section>
-	
-	
 	<section class="product">
 		<div class="image">
 			<a href="#"><img src="images/2.png" alt=""></a>	
@@ -59,9 +58,7 @@
 		</section>											
 		<section class="alt_text"> When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go! 
 		</section>
-	</section>
-	
-	
+	</section>	
 	<section class="product">
 		<div class="image">
 			<a href="#"><img src="images/3.png" alt=""></a>	
@@ -85,7 +82,6 @@
 		<section class="alt_text"> When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! 
 		</section>
 	</section>
-	
 	<section class="product">
 		<div class="image">
 			<a href="#"><img src="images/1.png" alt=""></a>	
@@ -111,8 +107,6 @@
 		<section class="alt_text"> When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go! Looking for some color to brighten up you today? Check out the cotton sundresses.
 		</section>
 	</section>
-	
-	
 	<section class="product">
 		<div class="image">
 			<a href="#"><img src="images/5.png" alt=""></a>	
@@ -140,8 +134,6 @@
 		<section class="alt_text"> When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go! 
 		</section>
 	</section>
-	
-	
 	<section class="product">
 		<div class="image">
 			<a href="#"><img src="images/6.png" alt=""></a>	
@@ -165,8 +157,6 @@
 		<section class="alt_text"> When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! 
 		</section>
 	</section>
-
-
 	<section class="product">
 		<div class="image">
 			<a href="#"><img src="images/7.png" alt=""></a>	
@@ -192,8 +182,6 @@
 		<section class="alt_text"> When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go! Looking for some color to brighten up you today? Check out the cotton sundresses.
 		</section>
 	</section>
-	
-	
 	<section class="product">
 		<div class="image">
 			<a href="#"><img src="images/8.png" alt=""></a>	
@@ -221,8 +209,6 @@
 		<section class="alt_text"> When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! So, why not start with a sundress? They always brighten up the environment around you and inspire positivity wherever you go! 
 		</section>
 	</section>
-	
-	
 	<section class="product">
 		<div class="image">
 			<a href="#"><img src="images/9.png" alt=""></a>	
@@ -243,10 +229,10 @@
 				</section>
 			</section>		
 		</section>											
-		<section class="alt_text"> When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! 
+		<section class="alt_text"> When you're dress-hunting, you want to find somethig that's fun, comfortable, flattering, and uniquely you! So, check out this killer slippers!
 		</section>
 	</section>
-	
-	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="products.js"></script>	
 </body>
 </html>
